# DS-288_Capstone

./: .gitignore  README.md  environment.yml  pyproject.toml  update_readme.py
.github/workflows/: update_readme.yml
CompetencyDemo/: CompetencyDemo.ipynb  demo_plots.py  utils.py
StatusReports/: Week01.md  Week08.md  Week1.md  Week10.md  Week11.md  Week12.md  Week13.md  Week14.md  Week15.md  Week16.md  Week17.md  Week18.md  Week19.md  Week2.md  Week3.md  Week5.md  Week6.md  Week7.md  Week9.md
benkler-E4mer/: Readme.md
benkler-E4mer/src/data/: load.py  preprocess.py  streaming_test.py
benkler-E4mer/src/mains/: flirt_scripting.py  full_train_process.py  pretrain.sh  pretrain_E4mer.py  train.sh  train_stress_classifier.py
benkler-E4mer/src/model/: config.py  custom_models.py  data.py  model.py  utils.py
benkler-E4mer/src/tests/: streaming_test.py
benkler-E4mer/src/utils/: config.py
