[tool.poetry]
name = "ds-288-capstone"
version = "0.1.0"
description = "Python environment for DS-288 Capstone project"
authors = ["Noam Benkler"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
torch = "^2.3.0"
gymnasium = "^0.29.1"
pyspark = "^3.5.1"
dash = "^2.17.0"
Flask = "^3.0.3"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
